# DHPC_TopoSort

./: .gitignore  README.md  sync_euler.sh  sync_xeon.sh
final presentation/: .gitignore  beamerheader.sty  presentation1.tex
measurements/: createdb.sh  measurements.db  plot.sh  randomlinWeakScalingAnnotator.sh  xml-format.xml
measurements/TopoSortParser/: build.xml  schema.sql
measurements/data/: DONTREMOVE.txt  bitset_global_opt0_an0_t10_p12_RANDOMLIN_n1000000_e29999064_e3004.xml  bitset_global_opt0_an0_t10_p12_RANDOMLIN_n1000000_e29999064_e3026.xml  bitset_global_opt0_an0_t10_p12_RANDOMLIN_n1000000_e29999064_e3094.xml  bitset_global_opt0_an0_t10_p12_RANDOMLIN_n1000000_e29999064_e3099.100.xml  bitset_global_opt0_an0_t10_p12_RANDOMLIN_n1000000_e29999064_e3099.xml  (+27593 more)
presentation/: beamerheader.sty  presentation1.aux  presentation1.nav  presentation1.tex  presentation1.toc
report/: abstract.tex  background.tex  bibliography.bib  conclusion.tex  implementation.tex  introduction.tex  report.tex  results.tex
src/: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  Timer.cpp  Timer.cpp~  Timer.hpp  Timer.hpp~  analysis.cpp  analysis.hpp  compileAll.sh  goeuler.sh  goeulerall.sh  goeulerbarriers.sh  goeulercountercheck.sh  goeulerpushback.sh  goeulerscalingrandom.sh  goeulerscalingsoftware.sh  goeulervertexscalingrandom.sh  goeulerweakscalingrandom.sh  goeulerweakscalingsoftware.sh  goxeon.sh  graph.cpp  graph.cpp~  graph.hpp  graph.hpp~  graphdoc.cpp  graphsort_omp_basic.cpp  graphsort_omp_basic.hpp  graphsort_omp_bitset.cpp  graphsort_omp_bitset_global.cpp  graphsort_omp_dynamic_nobarrier.cpp  graphsort_omp_locallist.cpp  graphsort_omp_locallist_global.cpp  graphsort_omp_nobarrier.cpp  graphsort_omp_static_nobarrier.cpp  graphsort_omp_tasks.cpp  graphsort_omp_tasks.hpp  graphsort_omp_worksteal.cpp  graphsort_omp_worksteal_global.cpp  (+27 more)
src/dryrun/: Makefile  test.cpp
src/graph_output/: chain.gv  multichain.gv  paper.gv  random_lin.gv
src/sortversions/: graph.cpp  graph_johannes.cpp  graph_syncval.hpp  graph_tasks.hpp  graph_whilebuggy.cpp  graph_whilecountfinished.cpp
src/temptrash/: graph_bckup.cpp  graph_seemstobefixed.cpp  graph_totaskornottotask.cpp  graph_workingfor.cpp
(+1891 files in other folders)
